boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_fallible_returns_as_throwing_functions.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/fallible_returns\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_checked_add(left: Int, right: Int): Int
    @JvmStatic external fun boltffi_function_demo_parse_point(text: ByteArray): ByteArray?
    @JvmStatic external fun boltffi_function_demo_validate_name(name: ByteArray): ByteArray?
}


data class Point(
    val x: Int,
    val y: Int
) {
    internal fun toByteArray(): ByteArray {
        val buffer = java.nio.ByteBuffer
            .allocate(STRUCT_SIZE)
            .order(java.nio.ByteOrder.nativeOrder())
        writeTo(buffer, 0)
        return buffer.array()
    }

    internal fun writeTo(buffer: java.nio.ByteBuffer, offset: Int) {
        buffer.putInt(offset, x)
        buffer.putInt(offset + 4, y)
    }

    companion object {
        internal const val STRUCT_SIZE: Int = 8

        internal fun fromByteArray(bytes: ByteArray): Point {
            require(bytes.size == STRUCT_SIZE)
            val buffer = java.nio.ByteBuffer
                .wrap(bytes)
                .order(java.nio.ByteOrder.nativeOrder())
            return fromBuffer(buffer, 0)
        }

        internal fun fromBuffer(buffer: java.nio.ByteBuffer, offset: Int): Point {
            return Point(
                buffer.getInt(offset),
                buffer.getInt(offset + 4)
            )
        }
    }
}


sealed class MathError(val value: Int) : Exception() {
    object InvalidInput : MathError(0)

    companion object {
        fun fromValue(value: Int): MathError =
            when (value) {
                0 -> InvalidInput
                else -> throw IllegalArgumentException("unknown MathError value: $value")
            }
    }
}

fun checkedAdd(left: Int, right: Int): Int {
    return try { Native.boltffi_function_demo_checked_add(left, right) } catch (__boltffi_error: BoltFfiErrorBufferException) { run { val __boltffi_error_reader = WireReader(__boltffi_error.bytes); throw MathError.fromValue(__boltffi_error_reader.readI32()) } }
}

fun parsePoint(text: String): Point {
    val __boltffi_text_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(text))
    val __boltffi_text_writer = __boltffi_text_wire.writer
    __boltffi_text_writer.writeString(text)
    try {
        val __boltffi_result = try { Native.boltffi_function_demo_parse_point(__boltffi_text_wire.bytes()) } catch (__boltffi_error: BoltFfiErrorBufferException) { run { val __boltffi_error_reader = WireReader(__boltffi_error.bytes); throw MathError.fromValue(__boltffi_error_reader.readI32()) } } ?: throw IllegalStateException("null buffer returned")
        return Point.fromByteArray(__boltffi_result)
    } finally {
        __boltffi_text_wire.close()
    }
}

fun validateName(name: String): String {
    val __boltffi_name_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(name))
    val __boltffi_name_writer = __boltffi_name_wire.writer
    __boltffi_name_writer.writeString(name)
    try {
        val __boltffi_result = try { Native.boltffi_function_demo_validate_name(__boltffi_name_wire.bytes()) } catch (__boltffi_error: BoltFfiErrorBufferException) { run { val __boltffi_error_reader = WireReader(__boltffi_error.bytes); throw MathError.fromValue(__boltffi_error_reader.readI32()) } } ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readString()
    } finally {
        __boltffi_name_wire.close()
    }
}
