boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_map_values_through_shared_codec.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/map_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_keep_scores(scores: ByteArray): ByteArray?
    @JvmStatic external fun boltffi_function_demo_keep_score_history(history: ByteArray): ByteArray?
}

fun keepScores(scores: Map<String, Int>): Map<String, Int> {
    val __boltffi_scores_wire = WireWriterPool.acquire(scores.wireSize({ __boltffi_value_0 -> 4 + Utf8Codec.maxBytes(__boltffi_value_0) }, { __boltffi_value_1 -> 4 }))
    val __boltffi_scores_writer = __boltffi_scores_wire.writer
    __boltffi_scores_writer.writeMap(scores, { __boltffi_scores_writer, __boltffi_value_0 -> __boltffi_scores_writer.writeString(__boltffi_value_0) }, { __boltffi_scores_writer, __boltffi_value_1 -> __boltffi_scores_writer.writeI32(__boltffi_value_1) })
    try {
        val __boltffi_result = Native.boltffi_function_demo_keep_scores(__boltffi_scores_wire.bytes()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readMap({ __boltffi_reader -> __boltffi_reader.readString() }, { __boltffi_reader -> __boltffi_reader.readI32() })
    } finally {
        __boltffi_scores_wire.close()
    }
}

fun keepScoreHistory(history: Map<String, IntArray>): Map<String, IntArray> {
    val __boltffi_history_wire = WireWriterPool.acquire(history.wireSize({ __boltffi_value_0 -> 4 + Utf8Codec.maxBytes(__boltffi_value_0) }, { __boltffi_value_1 -> 4 + __boltffi_value_1.size * 4 }))
    val __boltffi_history_writer = __boltffi_history_wire.writer
    __boltffi_history_writer.writeMap(history, { __boltffi_history_writer, __boltffi_value_0 -> __boltffi_history_writer.writeString(__boltffi_value_0) }, { __boltffi_history_writer, __boltffi_value_1 -> __boltffi_history_writer.writeIntArray(__boltffi_value_1) })
    try {
        val __boltffi_result = Native.boltffi_function_demo_keep_score_history(__boltffi_history_wire.bytes()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readMap({ __boltffi_reader -> __boltffi_reader.readString() }, { __boltffi_reader -> __boltffi_reader.readIntArray() })
    } finally {
        __boltffi_history_wire.close()
    }
}
