boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_primitive_function_stack.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/primitive_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_add(left: Int, right: Int): Int
    @JvmStatic external fun boltffi_function_demo_enabled(flag: Boolean): Boolean
    @JvmStatic external fun boltffi_function_demo_refresh(): Unit
    @JvmStatic external fun boltffi_function_demo_echo_bytes(bytes: ByteArray): ByteArray?
}

fun add(left: Int, right: Int): Int {
    return Native.boltffi_function_demo_add(left, right)
}

fun enabled(flag: Boolean): Boolean {
    return Native.boltffi_function_demo_enabled(flag)
}

fun refresh() {
    Native.boltffi_function_demo_refresh()
}

fun echoBytes(bytes: ByteArray): ByteArray {
    val __boltffi_bytes_wire = WireWriterPool.acquire(4 + bytes.size)
    val __boltffi_bytes_writer = __boltffi_bytes_wire.writer
    __boltffi_bytes_writer.writeBytes(bytes)
    try {
        val __boltffi_result = Native.boltffi_function_demo_echo_bytes(__boltffi_bytes_wire.bytes()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readBytes()
    } finally {
        __boltffi_bytes_wire.close()
    }
}
